# utils

./: .gitignore  .travis.yml  .typos.toml  Cargo.toml  README.md  SECURITY.md
aarch64-dit/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
aarch64-dit/src/: lib.rs
algorithm-registry/: Cargo.toml  README.md
algorithm-registry/src/: digest.rs  lib.rs
b64ct/: CHANGELOG.md  Cargo.toml  README.md
b64ct/benches/: mod.rs
b64ct/src/: errors.rs  lib.rs
b64ct/tests/: mod.rs
base64ct/: CHANGELOG.md  Cargo.toml  README.md
base64ct/benches/: mod.rs
base64ct/src/: bcrypt.rs  crypt.rs  decoder.rs  encoder.rs  encoding.rs  errors.rs  lib.rs  padded.rs  standard.rs  unpadded.rs  url.rs  variant.rs
base64ct/src/encoding/: bcrypt.rs  crypt.rs  standard.rs  url.rs
base64ct/src/variant/: bcrypt.rs  crypt.rs  standard.rs  url.rs
base64ct/tests/: bcrypt.rs  crypt.rs  lib.rs  mod.rs  padded.rs  standard.rs  unpadded.rs  url.rs
base64ct/tests/common/: mod.rs
biguint-literal/: Cargo.toml
biguint-literal/src/: lib.rs
bitref/: Cargo.toml  README.md
bitref/src/: errors.rs  iter.rs  lib.rs  tagged_len.rs
bitref/tests/: bitslice.rs
blobby/: CHANGELOG.md  Cargo.toml  README.md
blobby/benches/: mod.rs
blobby/examples/: convert.rs
blobby/src/: decode.rs  encode.rs  lib.rs
blobby/tests/: mod.rs
block-buffer/: CHANGELOG.md  Cargo.toml  README.md
block-buffer/src/: buffer.rs  lazy.rs  lib.rs  paddings.rs  read.rs  sealed.rs  utils.rs
block-buffer/tests/: mod.rs
block-padding/: CHANGELOG.md  Cargo.toml  README.md
block-padding/src/: lib.rs
byte-tools/: Cargo.toml
cmov/: CHANGELOG.md  Cargo.toml  README.md
cmov/src/: aarch64.rs  array.rs  backends.rs  lib.rs  macros.rs  portable.rs  slice.rs  utils.rs  x86.rs
cmov/src/backends/: aarch64.rs  soft.rs  x86.rs
cmov/tests/: core_impls.rs  lib.rs  proptests.rs  regression.rs
collectable/: CHANGELOG.md  Cargo.toml
collectable/src/: lib.rs
const-oid/: CHANGELOG.md  Cargo.toml  README.md
const-oid/src/: arcs.rs  encoder.rs  lib.rs  parser.rs
const-oid/tests/: lib.rs
cpubits/: CHANGELOG.md  Cargo.toml  README.md
cpubits/src/: lib.rs
cpufeatures/: CHANGELOG.md  Cargo.toml  README.md
cpufeatures/src/: aarch64.rs  aarch64_apple.rs  aarch64_linux.rs  fallback.rs  lib.rs  loongarch64.rs  loongarch64_linux.rs  x86.rs
cpufeatures/tests/: aarch64.rs  loongarch64.rs  x86.rs
cpuid-bool/: CHANGELOG.md  Cargo.toml
cpuid-bool/src/: lib.rs
crypto-bigint/: CHANGELOG.md  Cargo.toml  README.md
crypto-bigint/proptests/: Cargo.toml  lib.rs
crypto-bigint/proptests/tests/: equivalence.rs
crypto-bigint/src/: array.rs  checked.rs  lib.rs  limb.rs  macros.rs  ops.rs  traits.rs  uint.rs  wrapping.rs
crypto-bigint/src/limb/: add.rs  cmp.rs  encoding.rs  from.rs  mul.rs  rand.rs  sub.rs
crypto-bigint/src/uint/: add.rs  add_mod.rs  array.rs  bits.rs  cmp.rs  ct.rs  decode.rs  decoder.rs  div.rs  encoding.rs  from.rs  macros.rs  mul.rs  mul_mod.rs  neg_mod.rs  rand.rs  shl.rs  shr.rs  sub.rs  sub_mod.rs
crypto-bigint/src/uint/encoding/: decoder.rs
crypto-bigint/tests/: lib.rs  uint.rs
crypto-bigint/tests/uint/: add.rs  array.rs  from.rs  hex.rs  mod.rs  mul.rs  sub.rs
crypto-intrinsics/: Cargo.toml  README.md
crypto-intrinsics/src/: lib.rs  x86.rs  x86_64.rs
crypto-ops/: Cargo.toml  build.rs
crypto-ops/src/: helpers.asm  helpers.c  lib.rs
crypto-tests/: Cargo.toml
crypto-tests/src/: block_cipher.rs  hash.rs  lib.rs  mac.rs
cryptopan/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
cryptopan/src/: cryptopan.rs  lib.rs
cryptopan/tests/: mod.rs
ctgrind/: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
ctgrind/examples/: test.rs
ctgrind/src/: lib.rs
ctutils/: CHANGELOG.md  Cargo.toml  README.md
ctutils/src/: array.rs  bytes.rs  byteutils.rs  choice.rs  ct_option.rs  lib.rs  slice.rs  traits.rs
ctutils/src/traits/: ct_assign.rs  ct_eq.rs  ct_find.rs  ct_gt.rs  ct_lookup.rs  ct_lt.rs  ct_neg.rs  ct_select.rs  no_uninit.rs
ctutils/tests/: proptests.rs
dbl/: CHANGELOG.md  Cargo.toml  README.md
dbl/src/: lib.rs
der/: CHANGELOG.md  Cargo.toml  README.md
der/derive/: CHANGELOG.md  Cargo.toml  README.md
der/derive/src/: attributes.rs  choice.rs  lib.rs  message.rs  sequence.rs  types.rs
der/src/: any.rs  asn1.rs  bit_string.rs  byte_slice.rs  datetime.rs  decodable.rs  decode.rs  decoder.rs  encodable.rs  encode.rs  encoder.rs  error.rs  header.rs  integer.rs  length.rs  lib.rs  message.rs  null.rs  octet_string.rs  oid.rs  optional.rs  sequence.rs  str_slice.rs  tag.rs  traits.rs
der/src/asn1/: any.rs  big_integer.rs  big_uint.rs  bigint.rs  bit_string.rs  boolean.rs  choice.rs  context.rs  context_specific.rs  generalized_time.rs  ia5_string.rs  integer.rs  null.rs  octet_string.rs  oid.rs  printable_string.rs  sequence.rs  set_of.rs  utc_time.rs  utf8_string.rs
der/src/asn1/integer/: bigint.rs  int.rs  uint.rs
der/src/asn1/sequence/: iter.rs
der/src/tag/: class.rs  number.rs
der/tests/: derive.rs
digest-buffer/: Cargo.toml  LICENSE-MIT
digest-io/: CHANGELOG.md  Cargo.toml  README.md
digest-io/src/: io_wrapper.rs  lib.rs  reader.rs  writer.rs
fake-simd/: Cargo.toml
fiat-constify/: Cargo.toml  README.md
fiat-constify/src/: main.rs  outputs.rs  type_registry.rs
flex-array/: Cargo.toml  README.md
flex-array/src/: lib.rs
hex-literal/: CHANGELOG.md  Cargo.toml  README.md
hex-literal/hex-literal-impl/: Cargo.toml
hex-literal/hex-literal-impl/src/: lib.rs
hex-literal/src/: comments.rs  lib.rs
hex-literal/tests/: basic.rs  comments.rs
hmac/: Cargo.toml
hmac/src/: lib.rs
hmac/tests/: lib.rs
hybrid-array/: CHANGELOG.md  Cargo.toml  PERMISSIONS  README.md
inout/: CHANGELOG.md  Cargo.toml  README.md
opaque-debug/: CHANGELOG.md  Cargo.toml  README.md
pem-rfc7468/: CHANGELOG.md  Cargo.toml  README.md
pkcs1/: CHANGELOG.md  Cargo.toml  README.md
pkcs5/: CHANGELOG.md  Cargo.toml  README.md
pkcs8/: CHANGELOG.md  Cargo.toml  README.md
simd-buffers/: Cargo.toml  README.md
spki/: CHANGELOG.md  Cargo.toml  (+1 more)
(+187 files in other folders)
