[workspace]
resolver = "3"
members = [
    "blobby",
    "block-buffer",
    "block-padding",
    "collectable",
    "cmov",
    "ctutils",
    "cpufeatures",
    "dbl",
    "hex-literal",
    "inout",
    "opaque-debug",
    "wycheproof2blb",
    "zeroize",
    "zeroize_derive",
]
exclude = [
    # Works only on AArch64
    "aarch64-dit",
    # Results in circular dependencies
    "digest-io",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
cmov = { path = "cmov" }
