[workspace]
resolver = "3"
members = [
    "blobby",
    "block-buffer",
    "block-padding",
    "collectable",
    "cmov",
    "cpubits",
    "ctutils",
    "cpufeatures",
    "dbl",
    "hex-literal",
    "inout",
    "opaque-debug",
    "wycheproof2blb",
    "zeroize",
    "zeroize_derive",
]
exclude = [
    # Works only on AArch64
    "aarch64-dit",
    # Results in circular dependencies
    "digest-io",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
cmov = { path = "cmov" }

[workspace.lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
doc_markdown = "warn"
from_iter_instead_of_collect = "warn"
implicit_saturating_sub = "warn"
manual_assert = "warn"
map_unwrap_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
mod_module_files = "warn"
must_use_candidate = "warn"
needless_range_loop = "allow"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
ref_as_ptr = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
