[package]
name = "aarch64-dit"
version = "0.2.0-pre"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/aarch64-dit"
readme = "README.md"
repository = "https://github.com/RustCrypto/utils"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "intrinsics"]
categories = ["cryptography", "hardware-support", "no-std"]
description = "Wrappers for enabling/disabling the Data Independent Timing (DIT) feature on AArch64 CPUs"

[dependencies]
cpufeatures = { version = "0.3.0-pre", path = "../cpufeatures" }

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
