[package]
name = "algorithm-registry"
version = "0.1.0"
description = """
Utility to lookup algorithms from their OID
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/algorithm-db"
repository = "https://github.com/RustCrypto/hashes"
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-oid = { version = "0.9" }
digest = "0.10.7"

sha1 = { version = "0.10.6", features = ["oid"], optional = true }
sha2 = { version = "0.10.8", features = ["oid"], optional = true }
sha3 = { version = "0.10.8", features = ["oid"], optional = true }

[features]
default = ["sha1", "sha2", "sha3"]
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
