[package]
name = "base64ct"
version = "0.2.0" # Also update html_root_url in lib.rs when bumping this
description = """
Pure Rust implementation Base64 (RFC 4648) implemented without data-dependent
branches/LUTs thereby providing portable "best effort" constant-time operation
and embedded-friendly no_std support
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
documentation = "https://docs.rs/pkcs8"
repository = "https://github.com/RustCrypto/utils/tree/master/base64ct"
categories = ["cryptography", "encoding", "no-std"]
keywords = ["base64", "phc"]
readme = "README.md"

[features]
alloc = []
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
