[package]
name = "blobby"
version = "0.3.1"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Iterator over simple binary blob storage"
documentation = "https://docs.rs/blobby"
repository = "https://github.com/RustCrypto/utils"
categories = ["no-std"]
edition = "2018"

[dev-dependencies]
hex = "0.4"
