[package]
name = "blobby"
version = "0.4.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/blobby"
readme = "README.md"
repository = "https://github.com/RustCrypto/utils"
license = "MIT OR Apache-2.0"
categories = ["no-std"]
description = "Iterator over simple binary blob storage"

[features]
alloc = []

[lints]
workspace = true
