[package]
name = "block-buffer"
version = "0.11.0-rc.5"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Buffer type for block processing of data"
documentation = "https://docs.rs/block-buffer"
repository = "https://github.com/RustCrypto/utils"
keywords = ["block", "buffer"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
hybrid-array = "0.4"
zeroize = { version = "1.4", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"
