[package]
name = "block-padding"
version = "0.4.2"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/block-padding"
readme = "README.md"
repository = "https://github.com/RustCrypto/utils"
license = "MIT OR Apache-2.0"
keywords = ["padding", "pkcs7", "ansix923", "iso7816"]
categories = ["cryptography", "no-std"]
description = "Padding and unpadding of messages divided into blocks."

[dependencies]
hybrid-array = "0.4.6"

[lints]
workspace = true
