[package]
name = "cmov"
description = """
Conditional move CPU intrinsics which are guaranteed to execute in
constant-time and not be rewritten as branches by the compiler.
Provides wrappers for the CMOV family of instructions on x86/x86_64
and CSEL on AArch64.
"""
version = "0.4.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/utils/tree/master/cmov"
repository = "https://github.com/RustCrypto/utils"
categories = ["cryptography", "hardware-support", "no-std"]
keywords = ["crypto", "intrinsics"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"
