[package]
name = "collectable"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Fallible, no_std-friendly collection traits"
documentation = "https://docs.rs/collectable"
repository = "https://github.com/RustCrypto/utils"
categories = ["data-structures", "no-std"]
keywords = ["arrayvec", "heapless"]
edition = "2024"
rust-version = "1.85"

[features]
alloc = []

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "RustCrypto/utils" }
