[package]
name = "collectable"
version = "0.1.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/collectable"
repository = "https://github.com/RustCrypto/utils"
license = "Apache-2.0 OR MIT"
keywords = ["arrayvec", "heapless"]
categories = ["data-structures", "no-std"]
description = "Fallible, no_std-friendly collection traits"

[features]
alloc = []

[lints]
workspace = true
