[package]
name = "const-oid"
version = "0.3.0-pre"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
description = """
ISO/IEC Object Identifier (OID) constants with heapless no_std support
"""
documentation = "https://docs.rs/const-oid"
repository = "https://github.com/RustCrypto/utils"
categories = ["data-structures", "encoding", "no-std"]
keywords = ["iso", "iec", "itu", "oid"]
readme = "README.md"
