[package]
name = "const-oid"
version = "0.3.4"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
description = """
Const-friendly ISO/IEC Object Identifier (OID) library with support for
heapless no_std-environments
"""
documentation = "https://docs.rs/const-oid"
repository = "https://github.com/RustCrypto/utils"
categories = ["data-structures", "encoding", "no-std"]
keywords = ["iso", "iec", "itu", "oid"]
readme = "README.md"

[features]
std = []
