[package]
name = "const-oid"
version = "0.6.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
description = """
Const-friendly implementation of the ISO/IEC Object Identifier (OID) standard
as defined in ITU X.660, with support for BER/DER encoding/decoding as well as
heapless no_std (i.e. embedded) support
"""
documentation = "https://docs.rs/const-oid"
repository = "https://github.com/RustCrypto/utils"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["iso", "iec", "itu", "oid"]
readme = "README.md"

[dev-dependencies]
hex-literal = "0.3"

[features]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
