[package]
name = "cpufeatures"
version = "0.2.1" # Also update html_root_url in lib.rs when bumping this
description = """
Lightweight and efficient no-std compatible alternative to the
is_x86_feature_detected! macro
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cpufeatures"
repository = "https://github.com/RustCrypto/utils"
keywords = ["cpuid", "target-feature"]
categories = ["no-std"]
edition = "2018"
readme = "README.md"

[target.aarch64-apple-darwin.dependencies]
libc = "0.2.101"

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
libc = "0.2.101"
