[package]
name = "cpuid-bool"
version = "0.1.2"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "A lightweight no-std compatible alternative to is_x86_feature_detected"
documentation = "https://docs.rs/cpuid-bool"
repository = "https://github.com/RustCrypto/utils"
keywords = ["cpuid", "target-feature"]
categories = ["no-std"]
edition = "2018"
