[package]
name = "crypto-bigint"
version = "0.2.0" # Also update html_root_url in lib.rs when bumping this
description = """
Pure Rust implementation of a big integer library which has been designed from
the ground-up for use in cryptographic applications. Provides constant-time,
no_std-friendly implementations of modern formulas using const generics.
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
repository = "https://github.com/RustCrypto/utils/tree/master/crypto-bigint"
categories = ["algorithms", "cryptography", "data-structures", "mathematics", "no-std"]
keywords = ["arbitrary", "crypto", "bignum", "integer", "precision"]
readme = "README.md"

[dependencies]
generic-array = { version = "0.14", optional = true }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1", optional = true,  default-features = false }

[dev-dependencies]
hex-literal = "0.3"

[features]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
