[package]
name = "crypto-tests"
version = "0.4.0-rc1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "Test helpers for cryptographic algorithms"
documentation = "https://docs.rs/crypto-tests"
repository = "https://github.com/RustCrypto/utils"
keywords = ["crypto", "tests"]

[dependencies]
digest = "0.5.0-rc1"
block-cipher-trait = "0.4.0-alpha"
generic-array = "0.7"
