[package]
name = "crypto-tests"
version = "0.6.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "Test helpers for cryptographic algorithms"
documentation = "https://docs.rs/crypto-tests"
repository = "https://github.com/RustCrypto/utils"
keywords = ["crypto", "tests"]

[dependencies]
digest = "0.7"
crypto-mac = "0.5"
block-cipher-trait = "0.5"
