[package]
name = "ctutils"
description = """
Constant-time utility library with selection and equality testing support targeting cryptographic
applications. Supports `const fn` where appropriate. Built on the `cmov` crate which provides
architecture-specific predication intrinsics. Heavily inspired by the `subtle` crate.
"""
version = "0.4.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/utils/tree/master/ctselect"
repository = "https://github.com/RustCrypto/utils"
categories = ["cryptography", "no-std"]
keywords = ["constant-time", "crypto", "intrinsics"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
cmov = "0.5.1"

# optional dependencies
subtle = { version = "2", optional = true, default-features = false }

[dev-dependencies]
proptest = "1.9"

[features]
alloc = []
subtle = ["dep:subtle"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
