[package]
name = "dbl"
version = "0.4.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/dbl"
repository = "https://github.com/RustCrypto/utils"
keywords = ["crypto", "dbl", "gf", "galois"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
description = """Double operation in Galois Field `GF(2^128)` using the lexicographically first
polynomial among the irreducible degree `n` polynomials having a minimum number of coefficients."""

[dependencies]
hybrid-array = "0.3"
