[package]
name = "der"
version = "0.4.1" # Also update html_root_url in lib.rs when bumping this
description = """
Pure Rust embedded-friendly implementation of the Distinguished Encoding Rules
(DER) for Abstract Syntax Notation One (ASN.1) as described in ITU X.690 with
full support for heapless no_std targets
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
repository = "https://github.com/RustCrypto/utils/tree/master/der"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["asn1", "crypto", "itu", "pkcs"]
readme = "README.md"

[dependencies]
const-oid = { version = "0.6", optional = true, path = "../const-oid" }
crypto-bigint = { version = "0.2", optional = true, features = ["generic-array"], path = "../crypto-bigint" }
der_derive = { version = "0.4", optional = true, path = "derive" }

[dev-dependencies]
hex-literal = "0.3"

[features]
alloc = []
derive = ["der_derive"]
bigint = ["crypto-bigint"]
oid = ["const-oid"]
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
