[package]
name = "digest-io"
version = "0.1.0"
description = "std::io-compatibility wrappers for traits defined in the digest crate"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/digest-io"
repository = "https://github.com/RustCrypto/utils"
categories = ["cryptography"]
readme = "README.md"

[dependencies]
digest = "0.11.0-pre.10"

[dev-dependencies]
sha2 = "0.11.0-pre.5"
sha3 = "0.11.0-pre.5"
