[package]
name = "digest-io"
version = "0.1.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/digest-io"
readme = "README.md"
repository = "https://github.com/RustCrypto/utils"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "digest", "wrappers"]
categories = ["cryptography"]
description = "std::io-compatibility wrappers for traits defined in the digest crate"

[dependencies]
digest = "0.11.0-rc.5"

[dev-dependencies]
sha2 = "0.11.0-pre.5"
sha3 = "0.11.0-pre.5"
