[package]
name = "fiat-constify"
version = "0.1.0"
description = """
Postprocessor for fiat-crypto generated field implementations which rewrites
them as `const fn`
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/fiat-constify"
homepage = "https://github.com/RustCrypto/utils/tree/master/fiat-constify"
repository = "https://github.com/RustCrypto/utils"
categories = ["cryptography"]
keywords = ["fiat-crypto", "field"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
prettyplease = "0.2.19"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
